--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <!--Шапка сторінки   -->
     <header> 
         <nav>
+            <a href="./index.html">WebStudio</a>
             <ul>
-                <li> <a href="index.html">WebStudio</a></li>
-                <li> <a href="#"> Студія</a> </li>
+                <li> <a href="./index.html"> Студія</a> </li>
                 <li> <a href="#"> Портфоліо</a> </li>
                 <li> <a href="#"> Контакти</a> </li>
             </ul>
@@ -54,19 +54,19 @@
             <h2> Чим ми займаємося</h2>
             <ul>
                 <li> 
-                    <img src="./img/img_1.jpg" 
+                    <img src="./images/img_1.jpg" 
                     alt="На столі видно руки чоловіка, який працює за планшетним комп'ютером"
-                        width="400" />
+                        width="370" height="294" />
                 </li>
                 <li>
-                    <img src="./img/box_2.jpg" 
+                    <img src="./images/box_2.jpg" 
                     alt="Жінка тримає в руках смартфон і на ноутбуці відображається попередній вигляд сайту на смартфоні" 
-                    width="400" />
+                     width="370" height="294"/>
                 </li>
                 <li>
-                    <img src="./img/box_3.jpg" 
+                    <img src="./images/box_3.jpg" 
                     alt="На планшеті відображаються усі кольори у вигляді шестикутника заповненого сотами" 
-                    width="400" />
+                     width="370" height="294" />
                 </li>
             </ul>
         </section>
@@ -75,39 +75,39 @@
             <h2> Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./img/team_card_1.jpg" 
+                    <img src="./images/team_card_1.jpg" 
                          alt="Фото Ігора Дем'яненка (Product Designer)"
-                        width="400" />
+                         width="270" height="260" />
                         <h3> Ігор Дем'яненко</h3>
-                        <p> Product Designer</p>
+                        <p lang="en"> Product Designer</p>
                 </li>
                 <li>
-                    <img src="./img/team_card_2.jpg"
+                    <img src="./images/team_card_2.jpg"
                         alt="Фото Ольги Рєпіної (Frontend Developer) "
-                        width="400" />
+                          width="270" height="260" />
                         <h3> Ольга Рєпіна</h3>
-                        <p> Frontend Developer</p>
+                        <p lang="en"> Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./img/team_card_3.jpg"
+                    <img src="./images/team_card_3.jpg"
                         alt="Фото Миколи Тарасова (Marketing)" 
-                        width="400" />
+                          width="270" height="260"  />
                         <h3> Микола Тарасов</h3>
-                        <p> Marketing</p>
+                        <p lang="en"> Marketing</p>
                 </li>
                 <li>
-                    <img src="./img/team_card_4.jpg"
+                    <img src="./images/team_card_4.jpg"
                         alt="Фото Михайла Єрмакова (UI Designer)" 
-                        width="400" />
+                         width="270" height="260"  />
                         <h3> Михайло Єрмаков</h3>
-                        <p> UI Designer</p>
+                        <p lang="en"> UI Designer</p>
                 </li>
             </ul>
         </section>   
     </main>
 <!-- Підвал сторінки -->
     <footer>
-        <a href="index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <address>
             <ul>
                 <li> <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" 
@@ -116,9 +116,6 @@
                 <li> <a href="tel:+380961111111"> +38 096 111 11 11</a> </li>
             </ul>
         </address>
-        
-
-    </footer>
-    
+    </footer>    
 </body>
 </html>
